<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.calculator.gaurav.myapplication.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button4"
        android:id="@+id/button"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button7"
        android:id="@+id/button2"
        android:layout_above="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button1"
        android:id="@+id/button3"
        android:layout_above="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonDot"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button2"
        android:id="@+id/button5"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button8"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button5"
        android:id="@+id/button7"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button0"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button9"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button6"
        android:id="@+id/button10"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/button3"
        android:id="@+id/button11"
        android:layout_below="@+id/button10"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonEql"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonDiv"
        android:id="@+id/buttondiv"
        android:layout_alignTop="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonMul"
        android:id="@+id/buttonx"
        android:layout_below="@+id/buttondiv"
        android:layout_toRightOf="@+id/button10"
        android:layout_toEndOf="@+id/button10" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonSub"
        android:id="@+id/buttonSub"
        android:layout_below="@+id/buttonx"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonplus"
        android:layout_below="@+id/buttonSub"
        android:layout_toRightOf="@+id/button12"
        android:layout_toEndOf="@+id/button12" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="Welcome To My Calculator"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="24dp" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:text="Display"
        android:id="@+id/textView2"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:textAlignment="center"
        android:textSize="30dp" />

</RelativeLayout>
